# oz_workspace_agent

./: .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  battlecard-github-copilot-vs-warp-oz.md  docker-compose.yml  github-copilot-vs-warp-oz-battlecard.md  package-lock.json  package.json  plan.md  test-api.js  test-api.sh  test_hello.py  tsconfig.json  veritasc.py
agent-control/: index.html  package-lock.json  package.json  tailwind.config.js
agent-control-center/: README.md
agent-control-center/src-tauri/: Cargo.toml  tauri.conf.json
agent-control-center/src-tauri/capabilities/: default.json
agent-control-center/src-tauri/src/: ipc.rs  main.rs  models.rs  storage.rs  task_dispatch.rs
agent-control/src/: App.css  App.tsx
agent-control/src-tauri/: Cargo.toml  README.md  tauri.conf.json
agent-dev-env/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
agent-dev-env/src/: App.tsx  index.css
agent-dev-env/src-tauri/: Cargo.toml  tauri.conf.json
agent-dev-environment/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
agent-dev-environment/src/: types.ts
agent-dev-environment/src-tauri/: Cargo.toml  tauri.conf.json
agent-dev-environment/src-tauri/src/: lib.rs  main.rs
agent_mesh/: README.md  __init__.py
agent_mesh/core/: __init__.py  agent.py
agent_mesh/examples/: __init__.py  demo.py  specialized_agents.py
agent_mesh/registry/: __init__.py  registry.py
agentos/: .gitignore  README.md  README_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agentos/src/: App.tsx  index.css  main.tsx
agentos/src-tauri/: Cargo.toml  tauri.conf.json
agentos/src-tauri/src/: agent.rs  commands.rs  db.rs  ipc.rs  lib.rs  main.rs  mock.rs  models.rs  storage.rs  task_dispatch.rs
ai-agent-manager/: CONTRIBUTING.md  README.md  TASK_API.md  TASK_MANAGEMENT.md  auth.ts  docker-compose.yml  package-lock.json  package.json  prisma.config.ts
ai-agent-manager/app/: layout.tsx
ai-agent-manager/docs/: TASK_API.md
ai-agent-manager/hooks/: use-task-events.ts  useTasks.ts
ai-agent-manager/lib/: agent-templates.ts  api-client.ts  task-events.ts  taskService.ts  trust-metrics.ts  websocket.ts
ai-agent-manager/prisma/: schema.prisma  seed.ts
ai-agent-manager/types/: monitoring.ts  task.ts
backend/: .env.example  .eslintrc.json  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
docs/: TECH_STACK.md  TRUST_CALIBRATION.md
docs/phase2/: REQUIREMENTS-standard-library.md  REQUIREMENTS-syntax-design.md  REQUIREMENTS-type-system.md  error-message-specification.md  standard-library-specification.md  syntax-examples.md  syntax-specification.md  type-system-examples.md  type-system-specification.md
examples/todo_app/: README.md  test_let.veritas  todo.veritas  todo_simple.veritas
frontend/: .gitignore  README.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AgentList.tsx  TaskList.tsx
frontend/lib/: api.ts
frontend/src/: App.css  App.tsx  index.css
frontend/types/: index.ts
market_prediction/: .gitignore  README.md  __init__.py  models.py  requirements.txt  runner.py
marketing/: package-lock.json  package.json  tailwind.config.ts  vercel.json
marketing-site/: index.html  package-lock.json  package.json
prediction_engine/: README.md  __init__.py  backtest.py  backtester.py  cli.py  orchestrator.py  predictions.db  requirements.txt
scripts/: manage_task.py  run_tests.py  send_notification.py  send_post_request.py
shared/: package.json
src/: __init__.py  span.py
tests/: README.md  __init__.py  test_codegen.py  test_error_reporter.py  test_parser.py  test_stdlib.py
todo-app/: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
todo-marketing-site/: README.md  index.html  package-lock.json  package.json
(+428 files in other folders)
