[package]
name = "agent-control-center"
version = "0.1.0"
description = "Mission Control for AI Agent Teams - A MacOS desktop app for managing autonomous AI agents"
authors = ["Agent Control Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-open"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
thiserror = "1.0.58"
dirs = "5.0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
