[package]
name = "agent-dev-environment"
version = "0.1.0"
description = "The IDE for Agents, Not for Code"
authors = ["Agent Dev Team"]
edition = "2021"

[lib]
name = "agent_dev_environment_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
