[package]
name = "agentos"
version = "0.1.0"
description = "AgentOS - Mission Control for AI Agent Teams"
authors = ["AgentOS Team"]
license = "MIT"
repository = "https://github.com/agentos/agentos"
edition = "2021"

[lib]
name = "agentos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc", features = [] }
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
